TBC - 0.22.0
- [NEW] - ADIF Import - My Profile is used to define default values
- [NEW] - ADIF Import - Checking a minimal set of input fields (start_time, call, band, mode, station_callsign)
- [NEW] - ADIF Import - Added Import Result Summary + Import Detail Info
- Fixed Some anomalies in the input and processing of QSLr Date (issue #192)
- Fixed User unfriedly CW Keyer Error (issue #194)
- Fixed ADIF import (issue #196)
- Fixed Operator field is incorrectly used  (issue #197)
- Fixed Crash if an unknown POTA & SOTA/WWFF Setting is entered (issue #198)
- Fixed if ADIF record is missing band info, add this from freq field (thx DJ5CW)

2023/04/16 - 0.21.0
- [NEW] - Rotator - Added Used-Defined Buttons
- [NEW] - Rotator - Added Destination Azimuth Needle
- [NEW] - Online Map - Added Antenna Beam Path
- [NEW] - Rig - Combos are disbled when disconnected
- [NEW] - Club Member Lists (issue #60)
- [NEW] - Alert Table shows rule names
- [CHANGED] - Alerts, DXC and WSJTX Network Notifications
- Fixed Antenna Azimuth Negative Value (issue #191)
- Fixed CTY file is not loaded when duplicate record (issue #193)

2023/03/14 - 0.20.0
- [NEW] - Added MUF Layer to online map
- [NEW] - Added International Beacon Project (IBP) Beacons to online map
- [NEW] - Centering the map on the current profile at start (issue #185)
- Fixed incorrect ADIF interpretation of _SENT fields (issue #176)
- Fixed Awards Dialog, Table double click for ITU/CQZ/WAZ/IOTA shows incorrect QSOs (issue #177)
- Fixed ADIF double-type fields when 0.0 is currently mapped to NULL (issue #178)
- Fixed QSO Detail to save NULL instead of empty string (issue #179)
- Fixed ADIF Import default _INTL values are now stored correctly (issue #183)
- Fixed Maps show an incorrect path if from/to grids are the same (issue #186)
- Fixed Online Maps incorrect Bounds if Bandmap callsign double-click (issue #188)
- Updated German translation (thx DL2KI)

2023/02/17 - 0.19.0
- [NEW] - Added Aurora Layer to online map